kubernetes/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-app
          image: prodportfolio.azurecr.io/portfolio:latest
#TODO: RESOURCE LIMITS
