kubernetes/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - name: service
      port: 8080
      targetPort: 8080
