kubernetes/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://ota-phi-keyvault.vault.azure.net/certificates/portfolio-certificate
  name: portfolio-ingress
  namespace: portfolio
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: phitiet.nl
      http:
        paths:
          - backend:
              service:
                name: portfolio-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - phitiet.nl
      secretName: keyvault-portfolio-ingress
